# Documentation on setuptools & pyproject.toml - https://setuptools.pypa.io/en/latest/userguide/index.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "passyunk"
version = "2.1.0"
description = "Address parser for City of Philadelphia addresses"
readme = "README.md"
authors = [
    {name = "Tom Swanson"},
    {name = "James Midkiff", email = "james.midkiff@phila.gov"}
    ]
requires-python = ">=3.6"
dependencies = [
    'fuzzywuzzy>=0.11.1,<1.0',
    'Levenshtein>=0.20,<1.0',
    'requests>=2.28,<3.0'
    ]

[project.optional-dependencies] # Remove branch when ready
private = ["passyunk_automation @ git+ssh://git@github.com/CityOfPhiladelphia/passyunk_automation.git@setuptools"]

# [tool.setuptools.packages.find]
# where = ["passyunk"] # Includes the private data, but excludes the scripts. 
[tool.setuptools]
packages = ["passyunk"]

[tool.setuptools.package-data]
"*" = ["*.csv"]