# Documentation on setuptools & pyproject.toml - https://setuptools.pypa.io/en/latest/userguide/index.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "passyunk"
version = "2.21.0"
description = "Address parser for City of Philadelphia addresses"
readme = "README.md"
authors = [
    {name = "Tom Swanson"},
    {name = "James Midkiff", email = "james.midkiff@phila.gov"}
    ]
requires-python = ">=3.7"
dependencies = [
    'fuzzywuzzy>=0.11.1,<1.0',
    'Levenshtein>=0.20,<1.0',
    'requests>=2.28,<3.0', 
    'importlib-metadata>=6.0,<=7.0'
    ]

[project.optional-dependencies] 
private = ["passyunk_automation @ git+ssh://git@github.com/CityOfPhiladelphia/passyunk_automation.git"]
# The following syntax works: 
# pip install "passyunk[private] @ git+https://github.com/CityOfPhiladelphia/passyunk@<branch>"

[tool.setuptools.packages.find]
include = ["passyunk", "passyunk.pdata"] 

[tool.setuptools.package-data]
"*" = ["*.csv"]
